// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`task: checkWire should show all chains are connected 1`] = `
{
  "avalanche-mainnet": {
    "avalanche-mainnet": "",
    "ethereum-mainnet": "🟩",
  },
  "ethereum-mainnet": {
    "avalanche-mainnet": "🟩",
    "ethereum-mainnet": "",
  },
}
`;

exports[`task: checkWire should show no chains are connected 1`] = `
{
  "avalanche-mainnet": {
    "avalanche-mainnet": "",
    "ethereum-mainnet": "🟥",
  },
  "ethereum-mainnet": {
    "avalanche-mainnet": "🟥",
    "ethereum-mainnet": "",
  },
}
`;

exports[`task: checkWire should show one chain (eth) is connected 1`] = `
{
  "avalanche-mainnet": {
    "avalanche-mainnet": "",
    "ethereum-mainnet": "🟥",
  },
  "ethereum-mainnet": {
    "avalanche-mainnet": "🟩",
    "ethereum-mainnet": "",
  },
}
`;
